avahi (0.6.18-5) unstable; urgency=low

  * debian/avahi-daemon.init: Don't report failure when stopping an already
    stopped daemon (Closes: #421928)
  * debian/avahi-daemon-check-dns.sh: Explicitly set $PATH so programs in
    /usr/bin are also found (Closes: #421360)

 -- Sjoerd Simons <sjoerd@debian.org>  Thu, 03 May 2007 13:11:53 +0200

avahi (0.6.18-4) unstable; urgency=low

  [ Sjoerd Simons ]
  * debian/rules:
    + Ensure that ServiceTypeDatabase.py is generated instead of using the one
      from the tarball (Closes: #420184)
  * debian/avahi-daemon-check-dns.sh:
    + Minimise the number of times the DNS servers are checked for a unicast
      .local domain even more.  (Closes: #419796)
    + Use invoke-rc.d to start/stop avahi as we're a proper sysv init service
      now
  * debian/avahi-daemon.{ifupdown,resolvconf}:
    + Check if avahi-daemon-check-dns.sh is executable before executing it
      (Closes:  #419259)
  * debian/rules:
    + Disable gcc's strack protection on all archs except those that actually
      support it (powerpc s390 sparc amd64 i386). Fixes FTBS on the other
      architectures.
  * debian/patches/25_avahi_fix_desktop_files.patch:
    + Added. Only put at most one main category in one .desktop file. Fixes
      applications turning up in multiple places in the KDE menu. Also move 
      zvnc and zssh to the Network category.

  [ Michael Biebl ]
  * Start avahi-daemon and avahi-dnsconfd as regular SysV init scripts.
    (Closes: #396811, #367748, #378114)
    + debian/avahi-daemon.init,
      debian/avahi-dnsconfd.init
      - Added. Based on the upstream init scripts.
      - Add proper LSB headers.
      - Remove reimplementation of LSB logging functions. Depend on lsb-base
        being installed.
      - Use log_daemon_msg instead of log_begin_msg.
      - Remove SVN $Id keyword. (Closes: #354988)
    + debian/avahi-daemon.install,
      debian/avahi-dnsconfd.install
      - Do not install the upstream init script anymore.