@@ -4,8 +4,11 @@ avahi (0.6.18-5) unstable; urgency=low
     stopped daemon (Closes: #421928)
   * debian/avahi-daemon-check-dns.sh: Explicitly set $PATH so programs in
     /usr/bin are also found (Closes: #421360)
+  * debian/rules, debian/libavahi-ui0.links: Rename zssh and zvnc to bssh and
+    bvnc. Upstream will have this renaming in their next release 
+    (Closes: #421473)
 
- -- Sjoerd Simons <sjoerd@debian.org>  Thu, 03 May 2007 13:11:53 +0200
+ -- Sjoerd Simons <sjoerd@debian.org>  Thu, 03 May 2007 19:06:17 +0200
 
 avahi (0.6.18-4) unstable; urgency=low
 
